<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="392dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginEnd="14dp"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@color/highlight"
        android:gravity="center">

        <TextView
            android:id="@+id/about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/aboutTitleText"
            android:text="@string/about_title"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/about_copyright_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:textColor="@color/aboutCopyrightNoticeText"
            android:text="@string/about_copyright_notice"/>

        <TextView
            android:id="@+id/about_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/aboutAuthorText"
            android:text="@string/about_author"
            android:textAllCaps="true"
            android:gravity="center"/>

        <TextView
            android:id="@+id/about_lecturer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textSize="12sp"
            android:textColor="@color/aboutAuthorText"
            android:text="@string/about_lecturer"
            android:textAllCaps="true"
            android:gravity="center"/>

    </LinearLayout>


    <ImageView
        android:id="@+id/about_dismiss"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/selector_button_close"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>